# django-tw

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/django_wind/: apps.py  cli.py  conf.py  discovery.py
src/django_wind/management/commands/: runserver.py  tailwind.py
src/django_wind/templatetags/: wind.py
