[project]
name = "django-tw"
version = "0.1.1"
description = "Zero-config Tailwind CSS v4 for Django"
requires-python = ">=3.10"
dependencies = ["django>=4.2"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
