[project]
name = "django-tw"
dynamic = ["version"]
description = "Zero-config Tailwind CSS v4 for Django"
requires-python = ">=3.10"
dependencies = ["django>=4.2"]
license = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/kujov/django-tw"
Source = "https://github.com/kujov/django-tw"
Issues = "https://github.com/kujov/django-tw/issues"

[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
